--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -8,3 +9,10 @@
     <p>My first paragraph.</p>
 </body>
 </html>
+
+**git status
+
+**git add . --> or git add index.html
+**git commit -m "Initial commit"
+**git push origin filedirectory
+git checkout - b styling
