--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dgitcument</title>
 </head>
 <body>
+    <a href="/test/contact.html">contact</a>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
 </body>
