--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Dgitcument</title>
+    <link rel="stylesheet" href="test/style.css">
+    <title>Document</title>
 </head>
 <body>
     <a href="/test/contact.html">contact</a>
