--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="test/style.css">
+    <link rel="stylesheet" href="/test/style.css">
     <title>Document</title>
 </head>
 <body>
