--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/test/styles.css">
-    <title>Document!</title>
+    <title>Site</title>
 </head>
 <body>
     <a href="/test/contact.html">contact</a>
