--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <title>Site</title>
 </head>
 <body>
-    <a href="/test/contact.html">contact</a>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
 </body>
 </html>
 
+**git status
 
+**git add . --> or git add index.html
+**git commit -m "Initial commit"
+**git push origin filedirectory
+git checkout - b styling
