--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Site</title>
 </head>
 <body>
-    <header style="position: fixed; top: 0; left: 0; width: 100%; background-color: #f1f1f1;">
+    <header class="header">
         <nav>
             <ul style="list-style-type: none; margin: 0; padding: 0; display: flex; justify-content: flex-end;">
                 <li style="margin-right: 10px;"><a href="#about">About</a></li>
