--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-            <ul style="list-style-type: none; margin: 0; padding: 0; display: flex; justify-content: flex-end;">
-                <li style="margin-right: 10px;"><a href="#about">About</a></li>
+        <nav class=" top_nav">
+            <ul>
+                <li ><a href="#about">About</a></li>
                 <li style="margin-right: 10px;"><a href="#contact">Contact</a></li>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
             </ul>
