--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             </ul>
         </nav>
     </header>
+    <div class="welcome_container">
+        <h1>Welcome to our site</h1>
+        <p>Here you will find all the information you need</p>
+        <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam soluta maxime deserunt odio eaque pariatur cum voluptas iusto omnis beatae, voluptatem perspiciatis quos? Explicabo veniam, vitae culpa laboriosam adipisci earum!</h4>
+    </div>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
 </body>
