--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
         <p>Here you will find all the information you need</p>
         <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam soluta maxime deserunt odio eaque pariatur cum voluptas iusto omnis beatae, voluptatem perspiciatis quos? Explicabo veniam, vitae culpa laboriosam adipisci earum!</h4>
     </div>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <div class="contact_container">
+        <h2 id="contact">Contact Us</h2>
+      
+        <h1>My First Heading</h1>
+        <p>My first paragraph.</p>
+    </div>
 </body>
 </html>
 
-**git status
-
-**git add . --> or git add index.html
-**git commit -m "Initial commit"
-**git push origin filedirectory
-git checkout - b styling
