--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <h1>My First Heading</h1>
         <p>My first paragraph.</p>
     </div>
+    <footer class="footer">
+        <p>© 2021 Site. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
