--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <h1>My First Heading</h1>
         <p>My first paragraph.</p>
     </div>
+    <div class="about">
+        <h2 id="about">About Us</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+    </div>
     <footer class="footer">
         <p>© 2021 Site. All rights reserved.</p>
     </footer>
