--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
         <p>My first paragraph.</p>
     </div>
     <div class="about">
-        <h2 id="about">About Us</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+        <section>
+            <!-- Content for the first section -->
+            <p>This is the first section of the about div.</p>
+        </section>
+        <section>
+            <!-- Content for the second section -->
+            <p>This is the second section of the about div.</p>
+        </section>   
     </div>
     <footer class="footer">
         <p>© 2021 Site. All rights reserved.</p>
