--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
             <p>This is the second section of the about div.</p>
         </section>   
     </div>
+    <div class="our_team">
+        <h2>Our Team</h2>
+        <div class="team_member">
+            <img src="https://via.placeholder.com/150" alt="Team member 1">
+            <h3>John Doe</h3>
+            <p>CEO</p>
+        </div>
+        <div class="team_member">
+            <img src="https://via.placeholder.com/150" alt="Team member 2">
+            <h3>Jane Doe</h3>
+            <p>CTO</p>
+        </div>
+    </div>
     <footer class="footer">
         <p>© 2021 Site. All rights reserved.</p>
     </footer>
