--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <div class="welcome_container">
-        <h1>Welcome to our site</h1>
+        <h1>The future of Nigeria lies in its youth</h1>
         <p>Here you will find all the information you need</p>
         <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam soluta maxime deserunt odio eaque pariatur cum voluptas iusto omnis beatae, voluptatem perspiciatis quos? Explicabo veniam, vitae culpa laboriosam adipisci earum!</h4>
     </div>
