--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     </header>
     <div class="welcome_container">
         <h1>The future of Nigeria lies in its youth</h1>
-        <p>Here you will find all the information you need</p>
-        <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam soluta maxime deserunt odio eaque pariatur cum voluptas iusto omnis beatae, voluptatem perspiciatis quos? Explicabo veniam, vitae culpa laboriosam adipisci earum!</h4>
+        
+        <h2>NaijaCoder is an organization that is dedicated to organizing a free, intensive summer program in Nigeria to teach the basics of algorithms and computer programming to high schoolers and provide resources for students applying to universities abroad. 
+
+            Programming offers these students, especially those from indigent backgrounds, an opportunity to learn profitable skills and ignite their passions for problem-solving and critical thinking. 
+            </h4>
     </div>
     <div class="contact_container">
         <h2 id="contact">Contact Us</h2>
@@ -35,6 +38,18 @@
             <p>This is the second section of the about div.</p>
         </section>   
     </div>
+
+    <div class="about">
+        <section>
+            <!-- Content for the first section -->
+            <p>This is the first section of the about div.</p>
+        </section>
+        <section>
+            <!-- Content for the second section -->
+            <p>This is the second section of the about div.</p>
+        </section>   
+    </div>
+
     <div class="our_team">
         <h2>Our Team</h2>
         <div class="team_member">
