--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
         </h2>
     </div>
     <div class="contact_container">
-        <h2 id="contact">Contact Us</h2>
+        <h1 id="contact">NaijaCoder is an intensive summer program in Nigeria</h1>
       
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
     </div>
     <div class="about">
         <section>
