--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <div class="welcome_container">
         <h1>The future of Nigeria lies in its youth</h1>
         
-        <h2>NaijaCoder is an organization that is dedicated to organizing a free, intensive summer program in Nigeria to teach the basics of algorithms and computer programming to high schoolers and provide resources for students applying to universities abroad. 
-
-            Programming offers these students, especially those from indigent backgrounds, an opportunity to learn profitable skills and ignite their passions for problem-solving and critical thinking. 
+        <h2>NaijaCoder is an organization that is dedicated to organizing a free, intensive summer program in Nigeria to teach the basics of algorithms and computer programming to high schoolers and provide resources for students applying to universities abroad. Programming offers these students, especially those from indigent backgrounds, an opportunity to learn profitable skills and ignite their passions for problem-solving and critical thinking. 
         </h2>
     </div>
     <div class="contact_container">
